<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="PumpState" Id="{d866dd5f-1d2c-48d9-86b3-28bf8f5aa7de}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE PumpState :
	(STOP, RUN, ALARM, SERVICE):= STOP;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>