<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL" Id="{9fac8337-351b-4d8d-8210-9e1c19bde21b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	MAX_PUMPS: BYTE:=6;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>